--- a/Pomodoro-clock/index.html
+++ b/Pomodoro-clock/index.html
@@ -4,24 +4,31 @@
     <meta charset="utf-8">
     <title>Akin's Pomodoro Clock</title>
     <link rel="stylesheet" href="pomodoro.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <div class="outer-container">
-      <div class="intro"></div>
+      <div class="intro">
+        Akin's Pomodoro Clock
+      </div>
       <div class="body">
 
         <div class="clock">
-            <div class="brand">Cazio</div>
+          <div class="brand">Cazio</div>
           <div class="time"></div>
           <div class="buttons">
-            <button class="controls start">Start</button>
-            <button class="controls stop">Stop</button>
-            <input type="text" name="" class="input" placeholder="Time for?">
+            <button class="controls start"><i class="material-icons">play_arrow</i></button>
+            <button class="controls stop"><i class="material-icons">stop</i></button>
+            <input type="text" name="" class="input" placeholder="Timer">
           </div>
         </div>
+        <div class="footer">
+          timer input
+        </div>
+
       </div>
-      <div class="footer"></div>
-    </div>
+      </div>
+
     <script type="text/javascript" src="pomodoro.js"></script>
   </body>
 </html>
