--- a/Tic-Tac-toe/index.html
+++ b/Tic-Tac-toe/index.html
@@ -9,25 +9,26 @@
     <div class="outer-container">
       <div class="game-container">
         <div class="game-row">
-          <div class="game-square"></div>
+          <div class="game-square available" id="1"></div>
             <!-- &#10060; -->
-          <div class="game-square"></div>
-          <div class="game-square"></div>
+          <div class="game-square available" id="2"></div>
+          <div class="game-square available" id="3"></div>
         </div>
         <div class="game-row">
-          <div class="game-square"></div>
-          <div class="game-square"></div>
-          <div class="game-square"></div>
+          <div class="game-square available" id="4"></div>
+          <div class="game-square available" id="5"></div>
+          <div class="game-square available" id="6"></div>
         </div>
         <div class="game-row">
-          <div class="game-square"></div>
-          <div class="game-square"></div>
-          <div class="game-square"></div>
+          <div class="game-square available" id="7"></div>
+          <div class="game-square available" id="8"></div>
+          <div class="game-square available" id="9"></div>
         </div>
       </div>
       <footer>
         <div class="pick-type X">X? </div>
         <div class="pick-type O">or O?</div>
+        <button class="reset">Reset</button>
       </footer>
     </div>
     <script type="text/javascript" src="tic-tac-toe.js">
