add initial glowing and random glow functionality

--- a/simon-game/index.html
+++ b/simon-game/index.html
@@ -7,21 +7,22 @@
   </head>
   <body>
     <div class="outer-container">
-      <div class="top"></div>
+      <div class="top">Simon Game</div>
       <div class="main">
         <div class="simon-exterior">
-          <!-- <div class="quadrants-row"> -->
             <div class="quadrants one"></div>
             <div class="quadrants two"></div>
-          <!-- </div> -->
-          <div class="controls"></div>
-          <!-- <div class="quadrants-row"> -->
+          <div class="controls">
+            <div class="control-btn"></div>
+            <div class="control-btn"></div>
+            <div class="control-btn"></div>
+            <div class="control-btn"></div>
+          </div>
             <div class="quadrants three"></div>
             <div class="quadrants four"></div>
-          <!-- </div> -->
         </div>
       </div>
-      <div class="bottom"></div>
+      <div class="bottom">Designed by Akin Sowemimo</div>
     </div>
     <script type="text/javascript" src="simon-game.js"></script>
   </body>
