add buttons and starting and stopping feature

--- a/simon-game/index.html
+++ b/simon-game/index.html
@@ -13,10 +13,12 @@
             <div class="quadrants one"></div>
             <div class="quadrants two"></div>
           <div class="controls">
-            <div class="control-btn"></div>
-            <div class="control-btn"></div>
-            <div class="control-btn"></div>
-            <div class="control-btn"></div>
+            <div class="control-container">
+              <div class="control-btn start">Start</div>
+              <div class="control-btn stop">Stop</div>
+              <div class="control-btn"></div>
+              <div class="control-btn"></div>
+            </div>
           </div>
             <div class="quadrants three"></div>
             <div class="quadrants four"></div>
