add output screen for score plus initial functionality for longer running game with increasing difficulty

--- a/simon-game/index.html
+++ b/simon-game/index.html
@@ -17,7 +17,7 @@
               <div class="control-btn start">Start</div>
               <div class="control-btn stop">Stop</div>
               <div class="control-btn"></div>
-              <div class="control-btn"></div>
+              <div class="control-btn score"></div>
             </div>
           </div>
             <div class="quadrants three"></div>
