add sounds to each quadrant

--- a/simon-game/index.html
+++ b/simon-game/index.html
@@ -10,8 +10,12 @@
       <div class="top">Simon Game</div>
       <div class="main">
         <div class="simon-exterior">
-            <div class="quadrants one"></div>
-            <div class="quadrants two"></div>
+            <div class="quadrants one">
+              <audio src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" class="beeps"></audio>
+            </div>
+            <div class="quadrants two">
+              <audio src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" class="beeps"></audio>
+            </div>
           <div class="controls">
             <div class="control-container">
               <div class="control-btn start">Start</div>
@@ -20,8 +24,12 @@
               <div class="control-btn score"></div>
             </div>
           </div>
-            <div class="quadrants three"></div>
-            <div class="quadrants four"></div>
+            <div class="quadrants three">
+              <audio src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3" class="beeps"></audio></div>
+            <div class="quadrants four">
+              <audio src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3" class="beeps">
+              </audio>
+            </div>
         </div>
       </div>
       <div class="bottom">Designed by Akin Sowemimo</div>
