added css slider and insets with js changes to allow for off/on toggle

--- a/simon-game/index.html
+++ b/simon-game/index.html
@@ -18,9 +18,13 @@
             </div>
           <div class="controls">
             <div class="control-container">
-              <div class="control-btn start">Start</div>
-              <div class="control-btn stop">Stop</div>
-              <div class="control-btn"></div>
+              <label class="switch">
+                <input type="checkbox" id="slider-input">
+                <div class="slider round"></div>
+              </label>
+              <span>Start/Stop</span>
+              <div class="control-btn strict"></div>
+              <span>Strict</span>
               <div class="control-btn score"></div>
             </div>
           </div>
