--- a/simon-game/index.html
+++ b/simon-game/index.html
@@ -25,6 +25,7 @@
               <span>Start/Stop</span>
               <div class="control-btn strict"></div>
               <span>Strict</span>
+              <div class="light"></div>
               <div class="control-btn score"></div>
             </div>
           </div>
