--- a/Tic-Tac-toe/index.html
+++ b/Tic-Tac-toe/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Akin's Tic Tac Toe Game</title>
     <link rel="stylesheet" href="tic-tac-toe.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="outer-container">
-      <div class="game-container">
-        <div class="game-row">
-          <div class="game-square available" id="1"></div>
-            <!-- &#10060; -->
-          <div class="game-square available" id="2"></div>
-          <div class="game-square available" id="3"></div>
+        <div class="game-container">
+            <div class="game-row">
+                <div class="game-square available" id="1"></div>
+                <div class="game-square available" id="2"></div>
+                <div class="game-square available" id="3"></div>
+            </div>
+            <div class="game-row">
+                <div class="game-square available" id="4"></div>
+               <div class="game-square available" id="5"></div>
+                <div class="game-square available" id="6"></div>
+            </div>
+            <div class="game-row">
+                <div class="game-square available" id="7"></div>
+                <div class="game-square available" id="8"></div>
+                <div class="game-square available" id="9"></div>
+            </div>
         </div>
-        <div class="game-row">
-          <div class="game-square available" id="4"></div>
-          <div class="game-square available" id="5"></div>
-          <div class="game-square available" id="6"></div>
-        </div>
-        <div class="game-row">
-          <div class="game-square available" id="7"></div>
-          <div class="game-square available" id="8"></div>
-          <div class="game-square available" id="9"></div>
-        </div>
-      </div>
-      <footer>
-        <div class="pick-type X">X? </div>
-        <div class="pick-type O">or O?</div>
-        <button class="reset">Reset</button>
-      </footer>
+        <footer>
+            <div class="pick-type X">X</div>
+            <div class="pick-type O">O</div>
+            <button class="reset">Reset</button>
+        </footer>
     </div>
     <script type="text/javascript" src="tic-tac-toe.js">
     </script>
-  </body>
+</body>
+
 </html>
