--- a/Tic-Tac-toe/index.html
+++ b/Tic-Tac-toe/index.html
@@ -10,27 +10,35 @@
 <body>
     <div class="outer-container">
         <div class="game-container">
-            <div class="game-row">
-                <div class="game-square available" id="1"></div>
-                <div class="game-square available" id="2"></div>
-                <div class="game-square available" id="3"></div>
+            <!-- Trigger/Open The Modal -->
+            <button id="modalButton">Choose a tile</button>
+            <!-- The Modal -->
+            <div id="choiceModal" class="modal">
+                <!-- Modal Content -->
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <p>Make a choice</p>
+                    <div class="pick-type X">X</div>
+                    <div class="pick-type O">O</div>
+                    <button class="reset">Reset</button>
+                </div>
             </div>
             <div class="game-row">
-                <div class="game-square available" id="4"></div>
-               <div class="game-square available" id="5"></div>
-                <div class="game-square available" id="6"></div>
+                <div class="game-square available" data-id="1"></div>
+                <div class="game-square available" data-id="2"></div>
+                <div class="game-square available" data-id="3"></div>
             </div>
             <div class="game-row">
-                <div class="game-square available" id="7"></div>
-                <div class="game-square available" id="8"></div>
-                <div class="game-square available" id="9"></div>
+                <div class="game-square available" data-id="4"></div>
+                <div class="game-square available" data-id="5"></div>
+                <div class="game-square available" data-id="6"></div>
+            </div>
+            <div class="game-row">
+                <div class="game-square available" data-id="7"></div>
+                <div class="game-square available" data-id="8"></div>
+                <div class="game-square available" data-id="9"></div>
             </div>
         </div>
-        <footer>
-            <div class="pick-type X">X</div>
-            <div class="pick-type O">O</div>
-            <button class="reset">Reset</button>
-        </footer>
     </div>
     <script type="text/javascript" src="tic-tac-toe.js">
     </script>
